--- a/USBInterface/USBInterface.csproj
+++ b/USBInterface/USBInterface.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayHelpers.cs" />
+    <Compile Include="HidApi.cs" />
     <Compile Include="ReportEventArgs.cs" />
     <Compile Include="USBDevice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
